# ChangeLog for dev-libs/papi
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*papi-5.1.0.2 (28 Feb 2013)

  28 Feb 2013; Alexey Shvetsov <alexxy@gentoo.org> +metadata.xml,
  +papi-5.1.0.2.ebuild:
  Initial import