@@ -1,1 +1,2 @@
 DIST papi-5.1.0.2.tar.gz 3781062 SHA256 141fd3dbeb32120ba8ca5f6a64250c22167b5224457f8ea1c3f28c8774468a1c SHA512 c52a762ba5492c25fde284f86999fdbe38007da73ee09949d15c392935bd03004304a1194e331032961d370247c3b6c49c62504b0fce42985fd8fcf6cc97702f WHIRLPOOL 58642c1f49f5f554553245cca38d6f034dbe4981efffecf32fadff468e07670b98618c1a793980dfa6194a55dc7d9668efd9c0eb4bfed899504cadaa64968aad
+DIST papi-5.3.0.tar.gz 3928589 SHA256 99f2f36398b370e75d100b4a189d5bc0ac4f5dd66df44d441f88fd32e1421524 SHA512 a88d28d895a1b44b0d05ac90c39406b7e9806a1d865b39df405e55b27d7f6bb191330ed7df52d4f3f04f46ff94ce867e6c1bdd9b38c314652cff1ee9d838b226 WHIRLPOOL cf1074f259831283292b57b636b6b0083a11ec6084bce2361eabe3ca706fd3d2420d3ab4074c8024296b06d11223a1dcc9782040ab08502481498b84bb2517e6
