@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>sci</herd>
-	<maintainer>
-		<email>alexxy@gentoo.org</email>
-		<name>Alexey Shvetsov</name>
-	</maintainer>
+<herd>sci</herd>
+<maintainer>
+  <email>alexxy@gentoo.org</email>
+  <name>Alexey Shvetsov</name>
+</maintainer>
+<longdescription>
+  Performance Application Programming Interface provides the tool
+  designer and application engineer with a consistent interface and
+  methodology for use of the performance counter hardware found in
+  most major microprocessors.
+</longdescription>
 </pkgmetadata>
