@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/papi
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  16 Feb 2014; Sébastien Fabbro <bicatali@gentoo.org> metadata.xml:
+  dev-libs/papi: Version bump
 
 *papi-5.1.0.2 (28 Feb 2013)
 
